# Async_Backend_template

./: README.md  docker-compose.yml
api/: .env.template  Dockerfile  pyproject.toml  starter.py
api/srcs/: __init__.py
api/srcs/app/: decorators.py  models.py
api/srcs/app/views/: placeholder.py
api/srcs/flows/: flows.py
api/srcs/tasks/: models.py
aws_deploy/: setup_ec2.sh
gui/: Dockerfile  server.js
local_deploy/: Dockerfile  docker-compose.yml
local_deploy/api/: .env.template  Dockerfile  Dockerfile.db  pyproject.toml  starter.py
local_deploy/api/scripts/: api.sh  worker.sh
local_deploy/api/srcs/: config.py  main.py
local_deploy/api/srcs/app/: exceptions.py  schemas.py
local_deploy/api/srcs/app/views/: __init__.py
local_deploy/api/srcs/flows/: flows.py
local_deploy/api/srcs/tasks/: celery.py  notif.py  schemas.py
local_deploy/caddy/: Caddyfile
local_deploy/gui/: Dockerfile  package.json  server.js
